<resources>

    <string name="app_name">玉兰生活圈</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home_personal">个人中心</string>
    <string name="my_favor">我的收藏</string>
    <string name="home_history">历史记录</string>
    <string name="dinner">餐馆</string>
    <string name="loadmore">点击加载更多</string>
    <string name="loading">正在加载中</string>
    <string name="nonetwork">无网络连接</string>
    <string name="nomoredata">无更多数据</string>
    <string name="errordata">获取数据失败</string>
    <string name="commonphone">常用电话</string>
    <string name="takeaway">外卖</string>
    <string name="call">呼叫</string>
    <string name="save">收藏</string>
    <string name="view">查看菜单</string>
    <string name="opening">营业中</string>
    <string name="closed">打烊中</string>
   <string name="detail">详情</string>
   <string name="sms">短信</string>
   <string name="cancelfavor">取消收藏</string>
   <string name="notice">说明</string>
   <string name="menu">菜单</string>
</resources>